Diseño HTLM: Eeditado

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
            
             <form class="notes-form">
                 <h2>Student name👦🏻 </h2>
-                <input type= "text" id="t2"></br>
+                <input type= "text" id="t2" placeholder="Student name"></br>
                 <h2>Student last name 👩🏾‍🦰  </h2>
-                <input type= "text" id="t3"></br>
+                <input type= "text" id="t3"  placeholder="Student last name"></br>
                 <h2>Student age 🎂 </h2>
-                <input type= "text" id="t4"></br>
+                <input type= "text" id="t4"  placeholder="Student age"></br>
                 <h2>Subject to enroll 🎯</h2>
-                <input type= "text" id="t5"></br>
+                <input type= "text" id="t5"  placeholder="Spanish 2"></br>
                 <h2>Group to enroll 🟡 </h2>
-                <input type= "text" id="t5"></br>
+                <input type= "text" id="t5"  placeholder="Group 1-A"></br>
 
-                <input type="button-add" data-id="t1" class="button-check" id="send-note" value="Add" >
+                <input type="button" data-id="send-note" class="button-check" id="send-note" value="Add" >
             </form>
           
             </div>
@@ -51,4 +51,5 @@
 
     </section>
 </body>
+<script src="app.js"></script>
 </html>
