Botón de status:añadido

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                 <h2>Subject to enroll 🎯</h2>
                 <input type= "text" id="t5"  placeholder="Spanish 2"></br>
                 <h2>Group to enroll 🟡 </h2>
-                <input type= "text" id="t5"  placeholder="Group 1-A"></br>
+                <input type= "text" id="t6"  placeholder="Group 1-A"></br>
 
                 <input type="button" data-id="send-note" class="button-check" id="t10" value="Add" >
+                
+                <input type="button" data-id="send-note" class="button-check" id="t13" value="Check status" >
             </form>
           
             </div>
