HTML Y CSS modificado y listo para agregar funcionalidad

--- a/list.html
+++ b/list.html
@@ -19,15 +19,15 @@
         <div class="column uno">
            
             <form class="notes-form" id="formulario">
-                <h2>Student name👦🏻 </h2>
+                <h2>By name👦🏻 </h2>
                 <input type= "text" id="t2" placeholder="Student name"></br>
-                <h2>Student last name 👩🏾‍🦰  </h2>
+                <h2>By last name 👩🏾‍🦰  </h2>
                 <input type= "text" id="t3"  placeholder="Student last name"></br>
-                <h2>Student age 🎂 </h2>
+                <h2>By age 🎂 </h2>
                 <input type= "text" id="t4"  placeholder="Student age"></br>
-                <h2>Subject to enroll 🎯</h2>
+                <h2> By Subject to enroll 🎯</h2>
                 <input type= "text" id="t5"  placeholder="Spanish 2"></br>
-                <h2>Group to enroll 🟡 </h2>
+                <h2> By Group to enroll 🟡 </h2>
                 <input type= "text" id="t6"  placeholder="Group 1-A"></br>
 
                 <input type="button" data-id="send-note 3" class="button-check" id="send-note" value="Search" >
