--- a/list.html
+++ b/list.html
@@ -29,8 +29,8 @@
                 <input type= "text" id="t5"  placeholder="Spanish 2"></br>
                 <h2> By Group to enroll 🟡 </h2>
                 <input type= "text" id="t6"  placeholder="Group 1-A"></br>
-
-                <input type="button" data-id="send-note 3" class="button-check" id="send-note" value="Search" >
+               
+                <input type="button" onclick="filtrado()" data-id="send-note3" class="button-check" id="send-note" value="Search" >
 
     
 </body>
